--- a/front_next/app/globals.css
+++ b/front_next/app/globals.css
@@ -35,7 +35,7 @@ body {
 
 .main-content {
   flex: 1;
-  padding: 10px;
+  padding: 0;
   overflow-y: auto;
   background-color: var(--bg-color);
   display: flex;
